# seiswiggle

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  test.py
seiswiggle/: seiswiggle.py
